--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   },
   "dependencies": {
     "expo": "~49.0.7",
+    "expo-screen-orientation": "~6.0.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.3",
+    "react-native-dialog": "^9.3.0",
+    "react-native-http-server": "^0.1.2",
+    "react-native-popup-dialog": "^0.18.3",
+    "react-native-webview": "^13.3.1",
+    "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
